--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <title>Entrega 4</title>
 </head>
 <body>
-    <h1>WEBSOCKET</h1>
+    <h1 align='center'>Websocket</h1>
     {{{body}}}
 </body>
 </html>
